# v7unix

./: .gitignore  CMakeLists.txt  Makefile  README.md  TicketLock.cfg  TicketLock.tla  meson.build  setup.sh  src-kernel  src-user
.codex/: setup.sh
.github/workflows/: ci.yml  tla.yml
doc/: POSIX_Roadmap.md
docs/: IPC.md  POSIX_Roadmap.md  PackageSources.md
kernel/: CMakeLists.txt
scripts/: list_tree.py  prover-env.sh  tla.sh
src-kernel/: exo_ipc_queue.c  exo_mailbox.c  exo_mailbox.h
src-user/: CMakeLists.txt
src/user/: CMakeLists.txt
src/user/lib/: ipc.c
tests/: CMakeLists.txt  ipc_trace_concurrent.c  mailbox_processes.c  meson.build  sample.y  spinlock_fairness.c  spinlock_processes.c  spinlock_threads.c
v7/: bs.c
v7/usr/src/cmd/: CMakeLists.txt  calendar.c  sort.c
v7/usr/src/cmd/awk/: CMakeLists.txt
v7/usr/src/cmd/eqn/: CMakeLists.txt
v7/usr/src/cmd/f77/: malloc.c
v7/usr/src/cmd/lex/: CMakeLists.txt  lmain.c
v7/usr/src/cmd/m4/: CMakeLists.txt  m4.c
v7/usr/src/cmd/make/: CMakeLists.txt
v7/usr/src/cmd/neqn/: CMakeLists.txt
v7/usr/src/cmd/sed/: makefile
v7/usr/src/cmd/uucp/: gio.c  pk0.c
v7/usr/src/libF77/: abort_.c  main.c  s_paus.c  s_rnge.c  s_stop.c  signal_.c
v7/usr/src/libI77/: dballoc.c  util.c
v7/usr/sys/conf/: c.c  mch.s
v7/usr/sys/dev/: mx2.c  pk0.c  pk2.c  rl.c  tc.c
v7/usr/sys/h/: proc.h  spinlock.h  types.h
v7/usr/sys/sys/: clock.c  iget.c  machdep.c  main.c  malloc.c  pipe.c  prim.c  rdwri.c  sig.c  slp.c  subr.c  svr4_machdep.c  text.c
