file(GLOB TEST_SRC "*.c")
foreach(test ${TEST_SRC})
    get_filename_component(test_name ${test} NAME_WE)
    add_executable(${test_name} ${test})
    target_include_directories(${test_name} PRIVATE ${CMAKE_SOURCE_DIR}/v7/usr/sys/h)
    target_compile_features(${test_name} PRIVATE c_std_23)
    target_link_libraries(${test_name} PRIVATE pthread)
    add_test(NAME ${test_name} COMMAND ${test_name})
endforeach()
